--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,15 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-inngest==0.2.7
-minio==7.2.3
-python-multipart==0.0.6
-pydantic==2.5.3
-starlette
-anyio
-httpx
-openai==1.10.0
-langchain==0.1.4
-langchain-openai==0.0.5
-langchain-core==0.1.16
-langgraph==0.0.21
-python-dotenv==1.0.1
+fastapi>=0.110.0
+uvicorn>=0.29.0
+inngest>=0.5.15
+minio>=7.2.5
+python-multipart>=0.0.9
+pydantic>=2.7.0
+starlette>=0.37.0
+anyio>=4.3.0
+httpx>=0.27.0
+openai>=1.23.0
+langchain>=0.2.0
+langchain-openai>=0.1.7
+langchain-core>=0.2.0
+langgraph>=0.1.0
+python-dotenv>=1.0.1
