--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   # ---------------------------------------------------------------------------
@@ -17,11 +16,7 @@ services:
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+
 
   # ---------------------------------------------------------------------------
   # Service: Create Buckets (Initialization Sidecar)
@@ -31,8 +26,7 @@ services:
   createbuckets:
     image: minio/mc:RELEASE.2024-01-11T05-49-32Z
     depends_on:
-      minio:
-        condition: service_healthy
+      - minio
     entrypoint: >
       /bin/sh -c "
       until (/usr/bin/mc alias set local http://minio:9000 admin password123) do echo '...waiting...' && sleep 1; done;
@@ -52,6 +46,8 @@ services:
       - "8288:8288"
     environment:
       INNGEST_DEV: "1"
+      INNGEST_EVENT_KEY: "local"
+    command: ["inngest-cli", "dev", "--bind", "0.0.0.0"]
 
   # ---------------------------------------------------------------------------
   # Service: Backend (FastAPI)
@@ -73,6 +69,7 @@ services:
       - MINIO_BUCKET=voicemails
       - INNGEST_BASE_URL=http://inngest:8288
       - INNGEST_DEV=1
+      - INNGEST_EVENT_KEY=local
     depends_on:
       - minio
       - inngest
