--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,22 @@ services:
     command: ["inngest", "dev", "-u", "http://voicemail_backend:8000/api/inngest"]
 
   # ---------------------------------------------------------------------------
+  # Service: Postgres (Database)
+  # Role: Persists voicemail metadata.
+  # ---------------------------------------------------------------------------
+  db:
+    image: postgres:15-alpine
+    container_name: voicemail_db
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: voicemails
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  # ---------------------------------------------------------------------------
   # Service: Backend (FastAPI)
   # Role: API Gateway and Inngest Function Executor.
   # ---------------------------------------------------------------------------
@@ -70,9 +86,11 @@ services:
       - INNGEST_BASE_URL=http://inngest:8288
       - INNGEST_DEV=1
       - INNGEST_EVENT_KEY=local
+      - DATABASE_URL=postgresql://user:password@db:5432/voicemails
     depends_on:
       - minio
       - inngest
+      - db
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
   # ---------------------------------------------------------------------------
@@ -91,3 +109,4 @@ services:
 
 volumes:
   minio_data:
+  postgres_data:
